<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NotesApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search">search</string>
    <string name="search_note_here">Search note here!</string>
    <string name="add_note">Add Note</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="add_image">Add Image</string>
    <string name="add_image_note">Add Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="please_input_your_notes_here">Please input your notes here!</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="delete_note">Delete Note</string>
    <string name="enter_url_link_here">Enter url link here</string>
    <string name="add">ADD</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="delete_note_title_text">Delete Note</string>
    <string name="are_you_sure_want_to_delete_this_note"><![CDATA[>Are you sure want to delete this note?]]></string>
    <string name="delete_note_upcase">DELETE NOTE</string>
    <string name="cancel_upcase">CANCEL</string>
</resources>